welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:5: error: type yellow is not a member of object java.awt.Color
	(getCouleurSol():Color.yellow);
                               ^